--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "national park service mindsumo challenge",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1"
   },
