--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
+    "lunr": "^2.3.6",
     "mongoose": "^5.5.11"
   },
   "devDependencies": {},
