--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lunr": "^2.3.6",
     "mongoose": "^5.5.11"
   },
+  "engines": {
+    "node": "10.15.3"
+  },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd scripts && node app"
   },
   "repository": {
     "type": "git",
